--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "jquery": "~2.1.1",
         "bootstrap": "~3.1.1",
-        "bootstrap-jasny": "~3.1.3"
+        "bootstrap-jasny": "~3.1.3",
+        "google-code-prettify": "~1.0.1"
     }
 }
