Implemented epiceditor as editor. Switched to using a javascript markdown renderer (to be sure we match the preview of epiceditor.

--- a/bower.json
+++ b/bower.json
@@ -1,25 +1,27 @@
 {
-    "name": "pastegit",
-    "description": "Git-powered pastebin with (optional) login, editable pastes and paste history.",
-    "authors": [
-        "MaienM <michon1992@gmail.com>"
-    ],
-    "main": "main.py",
-    "license": "MIT",
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/MaienM/PasteGit.git"
-    },
-    "private": true,
-    "ignore": [
-        "**/.*",
-        "bower_components",
-        "repos"
-    ],
-    "dependencies": {
-        "jquery": "~2.1.1",
-        "bootstrap": "~3.1.1",
-        "bootstrap-jasny": "~3.1.3",
-        "google-code-prettify": "~1.0.1"
-    }
+  "name": "pastegit",
+  "description": "Git-powered pastebin with (optional) login, editable pastes and paste history.",
+  "authors": [
+    "MaienM <michon1992@gmail.com>"
+  ],
+  "main": "main.py",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MaienM/PasteGit.git"
+  },
+  "private": true,
+  "ignore": [
+    "**/.*",
+    "bower_components",
+    "repos"
+  ],
+  "dependencies": {
+    "jquery": "~2.1.1",
+    "bootstrap": "~3.1.1",
+    "bootstrap-jasny": "~3.1.3",
+    "google-code-prettify": "~1.0.1",
+    "epiceditor": "~0.2.2",
+    "marked": "~0.3.2"
+  }
 }
