--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "bootstrap-jasny": "~3.1.3",
     "google-code-prettify": "~1.0.1",
     "epiceditor": "~0.2.2",
-    "marked": "~0.3.2"
+    "marked": "~0.3.2",
+    "x-editable": "~1.5.1"
   }
 }
